Fix align problem of fixed head Table, close ant-design/ant-design#2328

--- a/assets/index.less
+++ b/assets/index.less
@@ -34,7 +34,7 @@
     overflow-x: scroll;
     padding-bottom: 20px;
     margin-bottom: -20px;
-    overflow-y: hidden;
+    overflow-y: scroll;
     box-sizing: border-box;
   }
 
